# tcc-GNL-amazon

./: .gitignore  LICENSE.md  README.md  pyproject.toml
archive/: vrp.py
data/: distance.xlsx  distancias.xlsx
data/demand_raw/: Dados_v3.xlsx
data/preprocessing/demands/: Amazonas.csv  Amazonas.parquet  Madeira.parquet  Solimoes.parquet  ['Amazonas', 'Madeira', 'Solimoes'].parquet  ['Amazonas', 'Madeira'].parquet  ['Amazonas', 'Solimoes'].parquet  ['Madeira', 'Solimoes'].parquet
data/preprocessing/departure_patterns/: 14_days.xlsx  21_days.xlsx  42_days.xlsx  7_days.xlsx
data/preprocessing/routes/: rotas_Amazonas.parquet  rotas_Amazonas_k_2.parquet  rotas_Amazonas_k_3.parquet  rotas_Amazonas_k_[35, 42, 77].parquet  rotas_Amazonas_k_[35, 42].parquet  rotas_Amazonas_k_[35].parquet  rotas_Amazonas_k_[42].parquet  rotas_Amazonas_k_[77].parquet  rotas_Madeira.parquet  rotas_Madeira_k_1.parquet  rotas_Madeira_k_2.parquet  rotas_Madeira_k_3.parquet  rotas_Madeira_k_[35, 42, 77].parquet  rotas_Madeira_k_[35, 42].parquet  rotas_Madeira_k_[35].csv  rotas_Madeira_k_[35].parquet  rotas_Madeira_k_[42].parquet  rotas_Madeira_k_[77].parquet  rotas_Solimoes_k_1.parquet  rotas_Solimoes_k_2.parquet  rotas_Solimoes_k_3.parquet  (+5 more)
data/rotas/: rotas_Solimões.parquet
model/: app.py  config.yaml
model/multiple/: app.py  config.yaml
model/single/: app.py  config.yaml
notebooks/: demand_SI_AM.ipynb
notebooks/.ipynb_checkpoints/: demand_SI_AM-checkpoint.ipynb
scripts/activation/: _vetor_A.py
scripts/route_generator/: config.yaml  route_generator.py
(+36 files in other folders)
